[package]
name = "ens-resolution"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.8.3", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
envy = "0.4.2"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
